TicTacToe: :art: Rewording field occurances

--- a/src/dontbreaktheice.tex
+++ b/src/dontbreaktheice.tex
@@ -207,7 +207,7 @@ function tooltip(on) {
 /**
  * Creates the path from bottom to top.
  * This is done by marking the bot and top row as unreachable first.
- * Afterwards a list of all possible slots is created from which
+ * Afterwards a list of all possible cells is created from which
  * a random one is selected until only one path is left.
  * After each draw it needs to be checked whether there is still a path,
  * if there is none the cell is added to the final path, since there is
